--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "assets": "3.0.0",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "mongodb-stitch-browser-sdk": "4.0.14-5",
     "npm-run-all": "4.1.3",
     "perfect-scrollbar": "1.4.0",
     "react": "16.5.2",
